hphp/hack/test/typecheck/pipe_operator_dollardollar_static_call.php.exp
File "pipe_operator_dollardollar_static_call.php", line 11, characters 15-26:
No static method `doesNotExist` in `Foo` (Typing[4090])
File "pipe_operator_dollardollar_static_call.php", line 4, characters 26-32:
Did you mean `fooMeth` instead?
File "pipe_operator_dollardollar_static_call.php", line 3, characters 7-9:
Declaration of `Foo` is here
